--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/stars.css">
 <div class="container mt-5">
 <div class="row">
-    <div class="col-6">
+    <div class="col-12 col-md-6">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i)=>{ %>
@@ -46,7 +46,7 @@
         </div>
 
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
             <div id="map"></div>
             
         <% if(currentUser){ %> 
