--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2022 Ayesha Zubair </p>
+            <p>&copy; YelpCamp 2022 Ayesha Zubair </p>
         </footer>
 
 
