--- a/views/campgrounds/about.ejs
+++ b/views/campgrounds/about.ejs
@@ -12,7 +12,7 @@
                     </div>
                 </div>
                 <div class="text-center p-2">
-                   <p>YelpCamp is a full stack application where users can create new campgrounds and can review other's campgrounds. To get started, <a href="/users/register">register</a>.
+                   <p>YelpCamp is a full stack application where users can create new campgrounds and can review other's campgrounds. To get started, <a href="/views/users/register.ejs">register</a>.
                      This app supports user authentication and authorization, posts management (creating, editing, and deleting), image uploading, responsive design, etc.
                      YelpCamp is created using Node.js, Express and MongoDB.
                    </p>
